Fixes #61 makinf sure footer links are whitish alll the time

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -489,8 +489,9 @@ html {
     background: none !important;
   }
 
+  footer nav a:link, 
   footer nav a:visited {
-    color:#FFF;
+    color: #f8f9fa; /* same as footer dark a */
   }
 
   /* Main Menu */
