Fixes #65 but applies to all ordered lists
Be on the look out for anywhere this may have caused an uniintended effect

--- a/css/style.css
+++ b/css/style.css
@@ -12339,6 +12339,11 @@ ul {
   margin-bottom: 20px;
 }
 
+ol {
+  list-style: none;
+  padding: 0;
+}
+
 /*.block-main li::before*/
 article li::before {
   content: "";
