--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1534,3 +1534,23 @@ html {
   .user-logged-in #block-assistb5subtheme-local-tasks {
     margin-top: 3em;
   }
+
+  /*accordion */
+  .accordion-item h2 {
+    padding-top: 0;
+    color: #fff;
+  }
+  .accordion-item a:link {
+    color: #fff;
+    text-decoration: none;
+  }
+  .accordion {
+    --bs-accordion-btn-bg: #FF671D;
+    --bs-accordion-btn-focus-box-shadow: none;
+  }
+  .accordion-button:not(.collapsed) {
+    --bs-accordion-active-bg: #6ABF4B;
+  }
+  .accordion-button:focus {
+    --bs-accordion-btn-focus-box-shadow: none;
+  }
