--- a/css/style.css
+++ b/css/style.css
@@ -12484,8 +12484,14 @@ footer nav a:visited {
 
 #zone-footer-second ul.navbar-nav {
   flex-direction: row;
+  flex-wrap: wrap;
 }
 
+@media screen and (max-width: 840px) {
+  #zone-footer-second ul.navbar-nav {
+    flex-direction: column;
+  }
+}
 #zone-footer-second .dropdown-menu {
   display: block;
   border: none;
