Fixes #53 by allowing the donate box to collapse gracefully
Along with previous commit sorts out the footer, now everything collapses

--- a/css/style.css
+++ b/css/style.css
@@ -12220,6 +12220,9 @@ nav .media-library-view--widget .view-header a.dropdown-item.is-active,
 
 .donate-tab-content {
   display: flex;
+  display: -webkit-flex;
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
 }
 
 .tab-families, .tab-hours-home, .tab-hours-hospital {
