--- a/scss/style.scss
+++ b/scss/style.scss
@@ -646,7 +646,7 @@ html {
   }
   
   /* Front Content */
-  #zone-content {
+  #zone-content:not(.front) {
     padding: 10px 1em 50px 1em;
   }
   /*.front .zone-content-wrapper,*/
@@ -762,10 +762,11 @@ html {
     align-items: center;
   }
 
-  #block-views-block-random-host-story-block {
+  /*#block-views-block-random-host-story-block {
     max-width: 960px;
     margin: auto;
   }
+  */
 
   .random-story {
     max-width: 60%;
@@ -776,9 +777,11 @@ html {
     border-radius: 25px;
   }
 
-  #block-views-block-random-host-story-block .random-story {
+  #block-views-block-random-host-story-block .random-story,
+  #block-views-block-random-homepage-story-block .random-story {
     max-width: 500px;
     margin: auto;
+    margin-right: 1em;
     position: absolute;
     top: 20%;
     left: 5%;
