Fixes #15 places the random story and host areas in the right place
I hope, finally!

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -778,6 +778,8 @@ html {
     display: flex;
     justify-content: center;
     align-items: center;
+    max-width: 960px;
+    margin: auto;
   }
 
   /*#block-views-block-random-host-story-block {
@@ -787,7 +789,7 @@ html {
   */
 
   .random-story {
-    max-width: 60%;
+    /*max-width: 60%;*/
     min-height: 200px;
     background: rgba(0,0,0,0.5);
     color: #FFF;
@@ -798,7 +800,7 @@ html {
   #block-views-block-random-host-story-block .random-story,
   #block-views-block-random-homepage-story-block .random-story {
     max-width: 500px;
-    margin: auto;
+    /*margin: auto;*/
     margin-right: 1em;
     position: absolute;
     top: 20%;
