First attempt to deal with background fleck problem
Applies background-size a s apossible fix

--- a/css/style.css
+++ b/css/style.css
@@ -12094,10 +12094,9 @@ nav .media-library-view--widget .view-header a.dropdown-item.is-active,
   left: -300px;
 }
 
-#zone-postscript-second {
+/*#zone-postscript-second {
   position: relative;
-}
-
+} */
 .front #zone-postscript-first {
   background: #009ADE;
   position: relative;
@@ -12122,7 +12121,8 @@ nav .media-library-view--widget .view-header a.dropdown-item.is-active,
   top: 0;
   width: 100%;
   margin-top: 0px;
-  right: -683px;
+  /*right: -683px; */
+  background-size: cover;
 }
 
 .front #zone-postscript-first::after {
@@ -13585,4 +13585,21 @@ td.recaptcha_label {
 
 .accordion-button:focus {
   --bs-accordion-btn-focus-box-shadow: none;
+}
+
+@media (max-width: 991.98px) {
+  #block-assistb5subtheme-content,
+#block-assistb5subtheme-breadcrumbs,
+#block-assistb5subtheme-page-title,
+#block-assistb5subtheme-local-tasks,
+#block-views-block-trustees-block,
+#block-views-block-leadership-team-block,
+#block-views-block-our-staff-block,
+#block-views-block-asylum-seekers-tell-their-stories-block-1-2,
+#block-views-block-faqs-legacy-block,
+#views-bootstrap-stories-block,
+#views-bootstrap-tab-views-bootstrap-tabs-block-1,
+#block-headercontact {
+    max-width: 100%;
+  }
 }/*# sourceMappingURL=style.css.map */
