--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1595,3 +1595,15 @@ html {
   .accordion-button:focus {
     --bs-accordion-btn-focus-box-shadow: none;
   }
+
+  /* Grid views of e.g. stories, people
+  *In the view add a class of assist-item to the bootstrap row
+  */
+  @include media-breakpoint-down(lg) {
+  .assist-item
+  /*.assist-item .views-field-body,
+  .assist-item .views-field-title*/ {
+    text-align: center;
+    margin-bottom: 1em;;
+  }
+}
