Fixes #84 by targetting just header links to be white
The missing link is now default blue.
Also catches and link to HM Customs in top FAQ

--- a/css/style.css
+++ b/css/style.css
@@ -13578,7 +13578,7 @@ td.recaptcha_label {
   color: #fff;
 }
 
-.accordion-item a:link {
+.accordion-header a:link {
   color: #fff;
   text-decoration: none;
 }
