--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1582,7 +1582,7 @@ html {
     padding-top: 0;
     color: #fff;
   }
-  .accordion-item a:link {
+  .accordion-header a:link {
     color: #fff;
     text-decoration: none;
   }
