--- a/css/style.css
+++ b/css/style.css
@@ -12430,11 +12430,13 @@ article li::before {
   margin-bottom: 10px;
 }
 
+/* Donate Button is hidden in the top area on large screens */
 .header-contact .header-donate {
   display: none;
 }
 
-@media (max-width: 767.98px) {
+/* Move donate link to header on small screens */
+@media (max-width: 991.98px) {
   .header-contact .header-donate {
     display: block;
     border: 0px;
@@ -12562,37 +12564,36 @@ span.nolink > .sf-sub-indicator {
   cursor: pointer;
 }
 */
-/* "Donate" menu link */
-#block-assistb5subtheme-main-navigation ul.navbar-nav li.nav-item:last-child,
-#superfish-1 li#menu-1023-1 {
-  display: block;
-  position: absolute;
-  right: 0;
-  top: -18px;
-  background: transparent;
-  z-index: 100;
+/* "Donate" menu link - only show styled on large screens and above */
+/*#superfish-1 li#menu-1023-1 */
+@media (min-width: 992px) {
+  #block-assistb5subtheme-main-navigation ul.navbar-nav li.nav-item:last-child {
+    display: block;
+    position: absolute;
+    right: 0;
+    top: -4px;
+    background: transparent;
+    z-index: 100;
+  }
+  /* #superfish-1 #menu-1023-1 a */
+  #block-assistb5subtheme-main-navigation ul.navbar-nav li.nav-item:last-child a {
+    border: 0px;
+    color: #FFF;
+    background-color: #FF671D;
+    padding: 2em;
+    font-size: 1rem;
+    font-family: "Cabin", sans-serif;
+    font-weight: 400;
+    line-height: 1.5;
+    text-decoration: none;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+  }
+  /* #superfish-1 #menu-1023-1 a:hover */
+  #block-assistb5subtheme-main-navigation li:last-child a:hover {
+    background: #6ABF4B;
+  }
 }
-
-#block-assistb5subtheme-main-navigation ul.navbar-nav li.nav-item:last-child a,
-#superfish-1 #menu-1023-1 a {
-  border: 0px;
-  color: #FFF;
-  background-color: #FF671D;
-  padding: 2em;
-  font-size: 1rem;
-  font-family: "Cabin", sans-serif;
-  font-weight: 400;
-  line-height: 1.5;
-  text-decoration: none;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
-}
-
-#block-assistb5subtheme-main-navigation li:last-child a:hover,
-#superfish-1 #menu-1023-1 a:hover {
-  background: #6ABF4B;
-}
-
 /* Accordion Menu*/
 .sf-accordion-toggle {
   text-align: center;
@@ -12708,6 +12709,7 @@ div.views-field-view-node-1 span.field-content {
   border: none;
 }
 
+/*Buttons - includes footer buttons*/
 a.o-action,
 .o-action a,
 .views-field-view-node a,
@@ -12729,10 +12731,14 @@ a.o-action,
   text-shadow: none;
 }
 
+/* Donate button in footer */
 #block-mainmenu ul.navbar-nav > li:last-child {
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
 }
 
 .action-link.section.register_link-section a.button.crm-register-button,
