--- a/scss/style.scss
+++ b/scss/style.scss
@@ -453,11 +453,13 @@ html {
     margin-bottom: 10px;
   }
   
+  /* Donate Button is hidden in the top area on large screens */
   .header-contact .header-donate {
     display: none;
   }
 
-  @include media-breakpoint-down(md) {
+  /* Move donate link to header on small screens */ 
+  @include media-breakpoint-down(lg) {
 
     .header-contact .header-donate {
       display: block;
@@ -585,37 +587,39 @@ html {
   }
   */
 
-  /* "Donate" menu link */
-
-
-  #block-assistb5subtheme-main-navigation ul.navbar-nav li.nav-item:last-child,
-  #superfish-1 li#menu-1023-1 {
-    display: block;
-    position: absolute;
-    right: 0;
-    top: -18px;
-    background: transparent;
-    z-index: 100;
-  }
-
-  #block-assistb5subtheme-main-navigation ul.navbar-nav li.nav-item:last-child a,
-  #superfish-1 #menu-1023-1 a {
-    border: 0px;
-    color: #FFF;
-    background-color: #FF671D;
-    padding: 2em;
-    font-size: 1rem;
-    font-family: 'Cabin', sans-serif;
-    font-weight: 400;
-    line-height: 1.5;
-    text-decoration: none;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
+  /* "Donate" menu link - only show styled on large screens and above */
   
-  }
-  #block-assistb5subtheme-main-navigation li:last-child a:hover,
-  #superfish-1 #menu-1023-1 a:hover {
-    background: #6ABF4B;
+  /*#superfish-1 li#menu-1023-1 */
+  @include media-breakpoint-up (lg) {
+    #block-assistb5subtheme-main-navigation ul.navbar-nav li.nav-item:last-child {
+      display: block;
+      position: absolute;
+      right: 0;
+      top: -4px;
+      background: transparent;
+      z-index: 100;
+    }
+
+    /* #superfish-1 #menu-1023-1 a */
+    #block-assistb5subtheme-main-navigation ul.navbar-nav li.nav-item:last-child a {
+      border: 0px;
+      color: #FFF;
+      background-color: #FF671D;
+      padding: 2em;
+      font-size: 1rem;
+      font-family: 'Cabin', sans-serif;
+      font-weight: 400;
+      line-height: 1.5;
+      text-decoration: none;
+      border-bottom-left-radius: 10px;
+      border-bottom-right-radius: 10px;
+    
+    }
+    
+    /* #superfish-1 #menu-1023-1 a:hover */
+    #block-assistb5subtheme-main-navigation li:last-child a:hover {
+      background: #6ABF4B;
+    }
   }
  
   /* Accordion Menu*/
@@ -727,7 +731,8 @@ html {
     background: none;
     border: none;
   }
-
+ 
+  /*Buttons - includes footer buttons*/
   a.o-action,
   .o-action a,
   .views-field-view-node a,
@@ -749,10 +754,12 @@ html {
     text-shadow: none;
   }
  
+  /* Donate button in footer */
   #block-mainmenu ul.navbar-nav > li:last-child {
   height: fit-content;
+  width: fit-content
   }
-  
+
   .action-link.section.register_link-section a.button.crm-register-button,
   .crm-button.crm-button-type-upload.crm-i-button input.crm-form-submit{
     text-shadow: none !important;
