Fixes #94 by using a string with actual quotes instead of entities
Can't really see why the originalwas wrong
https://www.w3schools.com/cssref/pr_gen_quotes.php

--- a/css/style.css
+++ b/css/style.css
@@ -13203,6 +13203,7 @@ blockquote {
   border-left: 10px solid #009ADE;
   margin: 0em 0px;
   padding: 1em 10px;
+  /*quotes: "\201C""\201D";*/
   quotes: "“" "”";
   margin-bottom: 20px;
 }
