Fixes #96 with css as requested

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1681,3 +1681,21 @@ html {
     margin-bottom: 1em;;
   }
 }
+
+/*From Naomi */
+
+.webform-share-page-body.mailing-list .webform-submission-form{
+  width: 15em;
+  margin: auto;
+}
+
+.webform-share-page-body.mailing-list h1 {
+  width: 15em;
+  margin: auto;
+color: white;
+font-size: 1.2em;
+}
+
+.webform-share-page-body.mailing-list .form-item label{
+color: white;
+}
